# PJN-projekt

./: Miary.py  Modele.py  Ogloszenia.py  README.md  projektPJN.py  pyproject.toml  requirements.txt
